--- a/SignalProcessing/.gitattributes
+++ b/SignalProcessing/.gitattributes
@@ -1,1 +1,2 @@
 246666__mtg__overall-quality-of-single-note-flute-c5.wav filter=lfs diff=lfs merge=lfs -text
+364663__jmiddlesworth__bird-call-in-spring.mp3 filter=lfs diff=lfs merge=lfs -text
